--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -14,5 +14,11 @@ anyhow.workspace = true
 clap.workspace = true
 serde_json.workspace = true
 thiserror.workspace = true
+chrono = { version = "0.4.42", default-features = true, features = ["clock"] }
+dirs = "6.0.0"
+reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
 safepipe-core = { path = "../core" }
 safepipe-spec = { path = "../spec" }
+
+[dev-dependencies]
+tempfile = "3.23.0"
